fix bug and add sample

--- a/src/nccl.h.in
+++ b/src/nccl.h.in
@@ -187,6 +187,10 @@ ncclResult_t  ncclAllReduce(const void* sendbuff, void* recvbuff, size_t count,
 ncclResult_t pncclAllReduce(const void* sendbuff, void* recvbuff, size_t count,
     ncclDataType_t datatype, ncclRedOp_t op, ncclComm_t comm, cudaStream_t stream);
 
+
+ncclResult_t ncclFusedAllReduceDropoutBias(const void* sendbuff, void* recvbuff, size_t count,
+    void* bias, int biasSize, float dropoutProb, ncclDataType_t datatype, ncclRedOp_t op, ncclComm* comm, cudaStream_t stream);
+    
 /*
  * Reduce-Scatter
  *
