remove print statements

--- a/src/nccl.h.in
+++ b/src/nccl.h.in
@@ -62,6 +62,8 @@ ncclResult_t pncclGetUniqueId(ncclUniqueId* uniqueId);
 ncclResult_t  ncclCommInitRank(ncclComm_t* comm, int nranks, ncclUniqueId commId, int rank);
 ncclResult_t pncclCommInitRank(ncclComm_t* comm, int nranks, ncclUniqueId commId, int rank);
 
+ncclResult_t  ncclCommInitRankWithScclXML(ncclComm_t* comm, int nranks, ncclUniqueId commId, int rank, const char* xmlFile);
+
 /* Creates a clique of communicators (single process version).
  * This is a convenience function to create a single-process communicator clique.
  * Returns an array of ndev newly initialized communicators in comm.
@@ -70,6 +72,7 @@ ncclResult_t pncclCommInitRank(ncclComm_t* comm, int nranks, ncclUniqueId commId
  * Order of devlist defines user-order of processors within the communicator. */
 ncclResult_t  ncclCommInitAll(ncclComm_t* comm, int ndev, const int* devlist);
 ncclResult_t pncclCommInitAll(ncclComm_t* comm, int ndev, const int* devlist);
+ncclResult_t  ncclCommInitAllWithScclXML(ncclComm_t* comm, int ndev, const int* devlist, const char* xmlFile);
 
 /* Frees resources associated with communicator object, but waits for any operations
  * that might still be running on the device. */
