--- a/src/nccl.h.in
+++ b/src/nccl.h.in
@@ -280,6 +280,9 @@ ncclResult_t  ncclRecv(void* recvbuff, size_t count, ncclDataType_t datatype, in
 ncclResult_t ncclCustomCollective(const void* sendbuff, void* recvbuff, size_t count,
     ncclDataType_t datatype, ncclComm* comm, cudaStream_t stream);
 
+ncclResult_t ncclCustomCollective2D(const void* sendbuff, void* recvbuff, const size_t ld, size_t count,
+    ncclDataType_t datatype, ncclComm* comm, cudaStream_t stream);
+
 /*
  * Group semantics
  *
