--- a/src/nccl.h.in
+++ b/src/nccl.h.in
@@ -24,6 +24,7 @@ extern "C" {
 
 /* Opaque handle to communicator */
 typedef struct ncclComm* ncclComm_t;
+typedef struct scclAlgorithm* scclAlgorithm_t;
 
 #define NCCL_UNIQUE_ID_BYTES 128
 typedef struct { char internal[NCCL_UNIQUE_ID_BYTES]; } ncclUniqueId;
@@ -59,7 +60,7 @@ ncclResult_t pncclGetUniqueId(ncclUniqueId* uniqueId);
 ncclResult_t  ncclCommInitRank(ncclComm_t* comm, int nranks, ncclUniqueId commId, int rank);
 ncclResult_t pncclCommInitRank(ncclComm_t* comm, int nranks, ncclUniqueId commId, int rank);
 
-ncclResult_t  ncclCommInitRankWithScclXML(ncclComm_t* comm, int nranks, ncclUniqueId commId, int rank, const char* xmlFile);
+ncclResult_t  ncclCommInitRankWithScclXML(ncclComm_t* comm, int nranks, ncclUniqueId commId, int rank, const char* xmlFile, scclAlgorithm_t* scclAlgorithm);
 
 /* Creates a clique of communicators (single process version).
  * This is a convenience function to create a single-process communicator clique.
