--- a/examples/Makefile
+++ b/examples/Makefile
@@ -28,7 +28,7 @@ test-sccl-cutlass-16-run-24-channels: test-sccl-cutlass
 
 
 matmul-allreduce-release: matmul-allreduce.cu
-	nvcc matmul-allreduce.cu -arch=sm_70 -O3 -Xptxas -O3 -DNDEBUG -std=c++11 -Xcompiler -fopenmp,-O3 -lcudadevrt -lcudart -I/usr/include/x86_64-linux-gnu/mpi -I.. \
+	nvcc matmul-allreduce.cu -arch=sm_70 -O3 -Xptxas -v,-O3 -DNDEBUG -std=c++11 -Xcompiler -fopenmp,-O3 -lcudadevrt -lcudart -I/usr/include/x86_64-linux-gnu/mpi -I.. \
 	-I/usr/local/cuda/include/ -I ../build/include/ -I ../../cutlass/include -I ../../cutlass/tools/util/include -I ../../cutlass/examples/common -L../build/lib/ -L/usr/local/cuda/lib64/ -lnccl -lcublas -lcurand -c && \
 	mpicxx matmul-allreduce.o -I/usr/local/cuda/include/ -I../build/include/ -L../build/lib/ -L/usr/local/cuda/lib64/ -lcudart -lnccl -lcublas -Wall -lcurand -lcudadevrt -std=c++11 -fopenmp -o matmul-allreduce
 
