--- a/src/nccl.h.in
+++ b/src/nccl.h.in
@@ -10,6 +10,7 @@
 #include <cuda_runtime.h>
 #include <cuda_fp16.h>
 #include <sys/types.h>
+#include <inttypes.h>
 
 #include <vector>
 
@@ -26,6 +27,11 @@
 #ifdef __cplusplus
 extern "C" {
 #endif
+
+struct scclFlag {
+  uint64_t flag;
+  uint64_t align[3]; // To avoid false sharing
+};
 
 //Represents a 2D chunk
 struct Block2D {
@@ -304,7 +310,7 @@ ncclResult_t ncclCustomCollective(const void* sendbuff, void* recvbuff, size_t c
 ncclResult_t ncclCustomCollective2D(const void* sendbuff, void* recvbuff, const size_t ld, size_t count,
     ncclDataType_t datatype, ncclComm* comm, cudaStream_t stream);
 
-ncclResult_t ncclCustomCollective2DInfo(std::vector<std::vector<NCCLChunk>>& ncclChunks, const size_t ld, size_t count,
+ncclResult_t ncclCustomCollective2DInfo(std::vector<std::vector<NCCLChunk>>& ncclChunks, scclFlag** deviceScclFlags, const size_t ld, size_t count,
     ncclDataType_t datatype, ncclComm* comm, cudaStream_t stream);
 /*
  * Group semantics
