--- a/src/nccl.h.in
+++ b/src/nccl.h.in
@@ -273,6 +273,16 @@ ncclResult_t  ncclRecv(void* recvbuff, size_t count, ncclDataType_t datatype, in
     ncclComm_t comm, cudaStream_t stream);
 
 /*
+ * SCCL Collective
+ *
+ * Run a SCCL Collective.
+ */
+ncclResult_t ncclCustomCollective(const void* sendbuff, void* recvbuff, size_t count,
+    ncclDataType_t datatype, ncclComm* comm, cudaStream_t stream);
+
+/*
+
+/*
  * Group semantics
  *
  * When managing multiple GPUs from a single thread, and since NCCL collective
