--- a/src/nccl.h.in
+++ b/src/nccl.h.in
@@ -275,7 +275,8 @@ ncclResult_t  ncclRecv(void* recvbuff, size_t count, ncclDataType_t datatype, in
 /*
  * SCCL Collective
  *
- * Run a SCCL Collective.
+ * Run a SCCL Collective. 
+ * Value of count is the minimum of send size per rank and receive size per rank.
  */
 ncclResult_t ncclCustomCollective(const void* sendbuff, void* recvbuff, size_t count,
     ncclDataType_t datatype, ncclComm* comm, cudaStream_t stream);
