create custom collective 2D version

--- a/src/nccl.h.in
+++ b/src/nccl.h.in
@@ -303,7 +303,7 @@ ncclResult_t  ncclRecv(void* recvbuff, size_t count, ncclDataType_t datatype, in
     ncclComm_t comm, cudaStream_t stream);
 
 /*
- * SCCL Collective
+ * SCCL Collectives
  *
  * Run a SCCL Collective. 
  * Value of count is the maximum of elements send per rank and elements receive per rank.
@@ -311,11 +311,12 @@ ncclResult_t  ncclRecv(void* recvbuff, size_t count, ncclDataType_t datatype, in
 ncclResult_t ncclCustomCollective(const void* sendbuff, void* recvbuff, size_t count,
     ncclDataType_t datatype, ncclComm* comm, cudaStream_t stream);
 
+/*
+ *
+ */
 ncclResult_t ncclCustomCollective2D(const void* sendbuff, void* recvbuff, const size_t ld, size_t count,
     ncclDataType_t datatype, ncclComm* comm, cudaStream_t stream);
 
-ncclResult_t ncclCustomCollective2DInfo(std::vector<std::vector<NCCLChunk>>& ncclChunks, scclFlag** deviceScclFlags, int* flagsPerBlock, const size_t ld, size_t count,
-    ncclDataType_t datatype, ncclComm* comm, cudaStream_t stream);
 /*
  * Group semantics
  *
