remove whitespaces and commented cut

--- a/src/nccl.h.in
+++ b/src/nccl.h.in
@@ -9,13 +9,7 @@
 
 #include <cuda_runtime.h>
 #include <cuda_fp16.h>
-#include <sys/types.h>
-#include <inttypes.h>
 
-#include <vector>
-
-#define MIN(x,y) (((x) < (y)) ? (x) : (y))
-#define MAX(x,y) (((x) > (y)) ? (x) : (y))
 #define NCCL_MAJOR ${nccl:Major}
 #define NCCL_MINOR ${nccl:Minor}
 #define NCCL_PATCH ${nccl:Patch}
@@ -27,11 +21,6 @@
 #ifdef __cplusplus
 extern "C" {
 #endif
-
-struct scclFlag {
-  uint64_t flag;
-  uint64_t align[3]; // To avoid false sharing
-};
 
 /* Opaque handle to communicator */
 typedef struct ncclComm* ncclComm_t;
@@ -283,17 +272,21 @@ ncclResult_t  ncclRecv(void* recvbuff, size_t count, ncclDataType_t datatype, in
 
 /*
  * SCCL Collectives
- *
- * Run a SCCL Collective. 
+ */
+
+ /*
+ * Run a SCCL Collective using 1-Dimensional chunks. 
  * Value of count is the maximum of elements send per rank and elements receive per rank.
  */
 ncclResult_t ncclCustomCollective(const void* sendbuff, void* recvbuff, size_t count,
     ncclDataType_t datatype, ncclComm* comm, cudaStream_t stream);
 
 /*
- *
+ * Run a SCCL Collective on 2-D Matrix using 2-Dimensional chunks. 
+ * Value of count is the maximum of elements send per rank and elements receive per rank.
+ * cols is the number of columns in the input Matrix.
  */
-ncclResult_t ncclCustomCollective2D(const void* sendbuff, void* recvbuff, const size_t ld, size_t count,
+ncclResult_t ncclCustomCollective2D(const void* sendbuff, void* recvbuff, const size_t cols, size_t count,
     ncclDataType_t datatype, ncclComm* comm, cudaStream_t stream);
 
 /*
